--- a/css/index.css
+++ b/css/index.css
@@ -872,7 +872,7 @@ header a:hover {
 }
 
 .repository-list-item__topics {
-  margin: 0.25rem 0;
+  margin: 0.25rem 0 0.75rem;
 }
 
 .repository-list-item__topics-tag {
